--- a/index.ipynb
+++ b/index.ipynb
@@ -76,6 +76,7 @@
     "# Your code here \n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('ggplot')\n",
+    "%matplotlib inli\n",
     "\n",
     "import numpy as np\n",
     "plt.figure(figsize=(12, 6))\n",
